--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
   },
   "dependencies": {
     "body-parser": "^1.19.0",
-    "cookie-parser": "~1.4.4",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
-    "debug": "~2.6.9",
-    "express": "~4.16.1",
-    "mongoose": "^5.7.11",
+    "debug": "^2.6.9",
+    "express": "^4.16.4",
+    "mongoose": "^5.9.5",
     "morgan": "~1.9.1",
     "nodemon": "^1.19.4"
   }
